--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM golang:1.20.1-bullseye AS builder
 WORKDIR /usr/src/app
 
 COPY go.mod go.sum ./
+RUN go mod tidy
 RUN go mod download && go mod verify
 
 COPY . .
